--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy==1.13.1
-matplotlib==2.0.2 
-seaborn==0.8.1
+seaborn>=0.9.0
+pandas>=0.23.4
+matplotlib>=2.2.3
+numpy>=1.13.1
+bokeh>=0.13.0
 stravalib==0.9.4
-pandas==0.23.4
-bokeh==1.0.0
+geopy==1.17.0
+geohash2==1.1
 
